add todo-tree extension

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -44,7 +44,8 @@
 				"waderyan.gitblame",
 				"donjayamanne.githistory",
 				"shardulm94.trailing-spaces",
-				"esbenp.prettier-vscode"
+				"esbenp.prettier-vscode",
+				"gruntfuggly.todo-tree"
 			]
 		}
 	},
