--- a/todo_list/Cargo.toml
+++ b/todo_list/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+rstest = "0.15.0"
+regex = "1"
+lazy_static = "1.4.0"
